--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 hound = "3.5.1"
 realfft = "3.3.0"
-itermore = { version = "*", features = ["array_windows"]}
+rustfft = "6.2.0"
